Fix tables on mobile

--- a/style/main.css
+++ b/style/main.css
@@ -239,6 +239,10 @@
       }
     }
 
+    div.table {
+      @apply flex overflow-x-scroll;
+    }
+
     table {
       @apply min-w-full mb-8 border-collapse table-auto;
 
